@startuml
class ReactionInfo {
+ quantityMade
+ reactionInputs
}


interface IReactionInfo {
+{abstract}getReactionForChemical(String chemical) -> Reaction
+{static} create(reactionFileName)
}

IReactionInfo - Reaction

class Reaction {
+outputChemical
+inputChemicalInfo
+outputChemicalQuantity
}


class Day14 {
-IReactionInfo reactionInfo
+leastOreRequiredToMakeNFuel(N)
+mostFuelForNOre(N)
+{static} fromReactionFileName(reactionFileName)
}

Day14 *- IReactionInfo
IReactionInfo <|.. ReactionInfo

Day14 --> IChemicalState : "creates"

interface IChemicalState {
+ {abstract} knownChemicals()
+ {abstract} getAmountAvailableOfChemical(chemical)
+ {abstract} applyReactionsToDestroyChemical(Reaction)
+balanceChemicalState(ReactionInfo)
}

interface ChemicalState {
+ {abstract} createChemical(chemical, amount)
+ {abstract} destroyChemical(chemical, amount)
+ applyReactionsToDestroyChemical(Reaction)
}

IChemicalState <|-- ChemicalState

ChemicalState <|.. ChemicalStateImpl

class ChemicalStateImpl {
+ createChemical(chemical, amount)
+ destroyChemical(chemical, amount)
+ getAmountAvailableOfChemical(chemical)
+ knownChemicals()
}

IChemicalState --> ChemicalStateImpl: "creates"
IReactionInfo --> ReactionInfo: "creates"
@enduml